src/tests/ci/assignment_6_advanced_features/valid/03_warning_int_float.c
typedef int MyInt;

int main() {
    MyInt x = 3.14;
    return 0;
}