src/tests/ci/assignment_6_advanced_features/invalid_semantic/01_name_conflict.c
typedef int int;  // ERROR

int main() {
    return 0;
}